--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ a {
 
 .header-bg {
   height: 200px;
-  background-image: url('header.jpeg');
+  background-image: url('headerr.jpg');
   background-size: cover;
   background-position: center;
 }
